noinst_LIBRARIES =		libopenbsdcompat.a

libopenbsdcompat_a_SOURCES =	fgetln.c
libopenbsdcompat_a_SOURCES +=	explicit_bzero.c
libopenbsdcompat_a_SOURCES +=	reallocarray.c
libopenbsdcompat_a_SOURCES +=	recallocarray.c
libopenbsdcompat_a_SOURCES +=	res_hnok.c
libopenbsdcompat_a_SOURCES +=	res_randomid.c
libopenbsdcompat_a_SOURCES +=	strlcat.c
libopenbsdcompat_a_SOURCES +=	strlcpy.c
#libopenbsdcompat_a_SOURCES +=	strsep.c
libopenbsdcompat_a_SOURCES +=	strtonum.c

libopenbsdcompat_a_CPPFLAGS =	-I$(builddir)/include
libopenbsdcompat_a_CFLAGS =	-fPIC
