noinst_LTLIBRARIES =	libopenbsdcompat.la

libopenbsdcompat_la_SOURCES =	fgetln.c
libopenbsdcompat_la_SOURCES +=	explicit_bzero.c
libopenbsdcompat_la_SOURCES +=	reallocarray.c
libopenbsdcompat_la_SOURCES +=	recallocarray.c
libopenbsdcompat_la_SOURCES +=	res_hnok.c
libopenbsdcompat_la_SOURCES +=	res_randomid.c
libopenbsdcompat_la_SOURCES +=	strlcat.c
libopenbsdcompat_la_SOURCES +=	strlcpy.c
#libopenbsdcompat_la_SOURCES +=	strsep.c
libopenbsdcompat_la_SOURCES +=	strtonum.c

libopenbsdcompat_la_CPPFLAGS =	-I$(builddir)/include
libopenbsdcompat_la_CFLAGS =	-fPIC
